# server/src/api/v1/activity/activity.constants.ts
@@ -3,6 +3,7 @@ export enum ActivityType {
   TODO_CREATED = 'TODO_CREATED',
   TODO_COMPLETED = 'TODO_COMPLETED',
   TODO_UNCOMPLETED = 'TODO_UNCOMPLETED',
+  TODO_REORDERED = 'TODO_REORDERED',
   TODO_DELETED = 'TODO_DELETED',
   SUBTASK_CREATED = 'SUBTASK_CREATED',
   SUBTASK_COMPLETED = 'SUBTASK_COMPLETED',
